--- a/src/components/Citations/citations.css
+++ b/src/components/Citations/citations.css
@@ -1,30 +1,19 @@
-
 /* mobile first */
-.app-header {
+.citations {
+  position: relative;
+  background-color: #3BACB6;
+  height: 410px;
   width: 80%;
-}
-
-.title {
-  text-align: center;
-  font-size: 2rem;
-  background-color: #2F8F9D;
-  padding: calc(var(--gap) /2);
-  margin-top: calc(var(--gap));
   border-radius: var(--borderRadius);
-  margin-bottom: var(--gap);
   box-shadow: var(--shadow);
   opacity: var(--opacity);
 }
 
 /* for tablet */
 @media (min-width: 576px) {
-  .app-header {
-    width: 50%;
-  }
-
-  .title {
-    font-size: 3rem;
-  }
+  .citations {
+    height: 450px;
+   }
 }
 
 /* for small screen */
